# Capstone-v0.1

./: .env.example  .gitignore  AI_Harness_ForgeCAD_Magazine.html  ARCHITECTURE_GUIDE.md  CLAUDE.md  PRD_Geometry_Agent_Harness (1).md  PRODUCT.md  README.md  knowledge_base.md  latest_wf.txt  main.py  pyproject.toml  start.sh  test.step  test_plan.py
.claude/: alfred-continuity.py  alfred-dev.local.md  alfred-evidence.json  alfred-memory.db  settings.json
KB/: rag_kb1.py  rag_kb2.py
artifacts/.chat_sessions/: 201be1cf-6e63-48e5-9fb2-febbc6aa490d.json  21b6c76d-54db-42b0-b0c1-a35f9042d411.json  73e3b14a-15af-4805-9083-6842d32a9c67.json  83401974-8e9f-46f2-adf0-4c490c9195f7.json  acf996ac-ae98-42b3-b7b2-e942fd1d4532.json  b704d0b3-04fe-4d37-9ee9-3fee22ed12d7.json  d8c0c48a-cb25-4739-844e-ce063962cbbc.json  ffca5a27-4e71-4eeb-8f3e-7cff4bd52d03.json
docs/project/: codebase-map.md  current.md  progress.md  traceability.md
eval_results/dry_run/: config.json
eval_results/gemini35_smoke/: config.json  results.jsonl
eval_results/phase2_full_claude/: config.json  results.jsonl
eval_results/phase2_gate/: config.json  metrics_summary.json  results.jsonl  results_with_metrics.jsonl  results_with_metrics.jsonl.bak
eval_results/phase2_gemini35flash/: config.json  results.jsonl
eval_results/phase3_t3/: config.json  results.jsonl
forgecad-workspace/: generated_part.forge.js  starter.forge.js
graphify-out/: .graphify_analysis.json  GRAPH_TREE.html  graph.html  graph.json  manifest.json
harness/: __init__.py  cli.py
scripts/: inject-forgecad.sh  plot_t3_metrics.py
(+1930 files in other folders)
