[project]
name = "capstone-v0-1"
version = "0.1.0"
description = "Geometry Agent Harness — RLM + Temporal + CadQuery + ForgeCAD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core CAD
    "cadquery>=2.4",
    "numpy",
    "numpy-stl",
    "trimesh",
    "vtk",
    # LLM
    "anthropic>=0.40.0",
    # Schema + validation
    "pydantic>=2.0",
    # Temporal durable orchestration
    "temporalio>=1.7.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Environment
    "python-dotenv",
    # Experiment tracking / eval
    "pandas",
    "matplotlib",
    # HTTP client (for CLI status streaming)
    "httpx>=0.27.0",
    # CLI
    "click>=8.1.0",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]
